--- a/repeat/style.css
+++ b/repeat/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: gilroy;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color:white
 }
 html,
@@ -10,4 +10,9 @@ body{
     height: 100%;
     width: 100%;
     background-color: black;
+}
+#box{
+    height: 250px;
+    width: 250px;
+    background-color:rgb(11, 125, 170) ;
 }
